# quikdecision-web

./: CHANGELOG.md  Cargo.toml  README.md  TODO.md
src/: lib.rs  main.rs
static/: attribution.html  openapi.yaml  privacy.html  quikdecision.html
templates/: quikdecision.html
