[package]
name = "quikdecision-web"
version = "0.9.1"
authors = ["G. Wade Johnson <gwadej@anomaly.org>"]
description = "Make random decisions using one of a few different methods."
readme = "README.md"
keywords = ["decisions", "random", "coin flip", "dice roll"]
categories = ["command-line-utilities", "games"]
license = "MIT"
edition = "2018"

[dependencies]

rand = "0.5.5"
regex = "1"
quikdecision = { git = "https://github.com/gwadej/quikdecision_rust" }
hyper = "0.12"
futures = "0.1.25"
serde_json = "1.0"
percent-encoding = "1.0.1"

[lib]
name = "qdweb"
